# CmakeHelloWorldTestProject

./: .gitignore  CMakeLists.txt  README.md  build_debug__x86_64_msvc17.bat  build_debug_x86_64_gcc.sh  build_release_x86_64_gcc.sh  build_release_x86_64_msvc17.bat
